--- a/Part 6.5 RPS/Properties/Resources.resx
+++ b/Part 6.5 RPS/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="bluemanc" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bluemanc.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="download" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\download.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -126,5 +129,8 @@
   </data>
   <data name="pasadena_boy_starts_rock_wall_for_painted_rocks_1_large" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pasadena-boy-starts-rock-wall-for-painted-rocks-1_large.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="redmanc" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\redmanc.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
